{
    "name": "PlayerControle",
    "maps": [
        {
            "name": "GamePlay",
            "id": "f6e300b7-6397-47ce-8c07-b4bcf3b51ca8",
            "actions": [
                {
                    "name": "MoveByMouse",
                    "type": "Value",
                    "id": "c05c9b16-ac89-4061-83a1-b7e1c7a5e228",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a87c639f-c0a6-4f01-9986-99fac6308baf",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveByMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}